# azure_devops_webapi

python/: config.py  pull_requests.ipynb  pull_requests.py  schema.py  wiql.ipynb  wiql.py
python/settings/: config.py  webapi_paths.py
rust/work_items/: .gitignore  Cargo.toml
rust/work_items/src/: main.rs  request.rs  work_items.rs
